force-app/main/default/objects/T_Performance_Team_List__c/T_Performance_Team_List__c.object-meta.xml
<CustomObject>
    <label>T-Performance Team List</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>T-Performance Team List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T-Performance Team Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>