force-app/main/default/objects/T_Performance_Team_List__c/fields/Branch_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Team_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Branch/Team Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>