force-app/main/default/objects/T_Performance_Team_List__c/fields/Branch_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Team_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch/Team Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>