force-app/main/default/objects/T_Performance_Team_List__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>