force-app/main/default/objects/T_Performance_Team_List__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Code/ Department Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>