force-app/main/default/objects/T_Performance_Team_List__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>