force-app/main/default/objects/T_Performance_Team_List__c/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Code/ Division Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>