force-app/main/default/objects/T_Performance_Team_List__c/fields/Zone_Code_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code_and_Name__c</fullName>
    <formula>&apos;(&apos;&amp; Zone_Code__c &amp;&apos;) &apos;&amp; Zone_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone Code and Name</label>
    <type>Text</type>
</CustomField>