force-app/main/default/objects/T_Performance_Team_List__c/fields/Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>