force-app/main/default/objects/T_Performance_Team_List__c/listViews/All_Team_List.listView-meta.xml
<ListView>
    <fullName>All_Team_List</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Region_Code_and_Name__c</columns>
    <columns>Zone_Code_and_Name__c</columns>
    <columns>Team_Code_and_Name__c</columns>
    <columns>Branch_Team_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Team List</label>
</ListView>